--- a/SAAS/style.css
+++ b/SAAS/style.css
@@ -20,14 +20,12 @@ html {
 }
 
 body {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(45, 51, 59, 0.5)), color-stop(95%, #000000)), url(../img/gora.jpg);
-  background-image: linear-gradient(180deg, rgba(45, 51, 59, 0.5), #000000 95%), url(../img/gora.jpg);
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(45, 51, 59, 0.5)), color-stop(95%, #000000)), url(../img/gora.jpg) no-repeat;
+  background: linear-gradient(180deg, rgba(45, 51, 59, 0.5), #000000 95%), url(../img/gora.jpg) no-repeat;
   background-size: cover;
   background-position: center;
   margin: 0;
   padding: 0;
-  height: 100%;
-  width: 100%;
   font-family: "Raleway", sans-serif;
 }
 
@@ -45,7 +43,7 @@ body {
 }
 
 .form-wrapper {
-  margin-top: 100px;
+  margin-top: 120px;
   width: 400px;
   background-color: #ffffff;
   border-radius: 1%;
