--- a/SAAS/style.scss
+++ b/SAAS/style.scss
@@ -12,14 +12,12 @@ html {
 }
 
 body {
-  background-image: linear-gradient(180deg, rgba(45, 51, 59, 0.5), #000000 95%),
-    url(../img/gora.jpg);
+  background: linear-gradient(180deg, rgba(45, 51, 59, 0.5), #000000 95%),
+    url(../img/gora.jpg) no-repeat;
   background-size: cover;
   background-position: center;
   margin: 0;
   padding: 0;
-  height: 100%;
-  width: 100%;
   font-family: "Raleway", sans-serif;
 }
 
@@ -31,7 +29,7 @@ body {
 }
 
 .form-wrapper {
-  margin-top: 100px;
+  margin-top: 120px;
   width: 400px;
   background-color: #ffffff;
   border-radius: 1%;
