--- a/SAAS/style.css
+++ b/SAAS/style.css
@@ -305,3 +305,21 @@ button[type="submit"]:hover {
   background: #000000;
   color: #ffffff;
 }
+
+@media (max-width: 599px) {
+  .form-wrapper {
+    width: 300px;
+    margin-top: 80px;
+  }
+  fieldset {
+    width: 200px;
+  }
+  legend {
+    font-size: 30px;
+    top: -70px;
+  }
+  .test {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+}
