--- a/SAAS/style.css
+++ b/SAAS/style.css
@@ -20,17 +20,17 @@ html {
 }
 
 body {
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(45, 51, 59, 0.5)), color-stop(95%, #000000)), url(../img/gora.jpg) no-repeat;
-  background: linear-gradient(180deg, rgba(45, 51, 59, 0.5), #000000 95%), url(../img/gora.jpg) no-repeat;
-  background-size: cover;
-  background-position: center;
   margin: 0;
   padding: 0;
   font-family: "Raleway", sans-serif;
 }
 
 .wrapper {
-  height: 100%;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(45, 51, 59, 0.5)), color-stop(95%, #000000)), url(../img/gora.jpg) no-repeat;
+  background: linear-gradient(180deg, rgba(45, 51, 59, 0.5), #000000 95%), url(../img/gora.jpg) no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -318,8 +318,17 @@ button[type="submit"]:hover {
     font-size: 30px;
     top: -70px;
   }
+  input[type="text"],
+  [type="email"],
+  [type="password"] {
+    padding-top: 20px;
+  }
   .test {
     padding-top: 20px;
     padding-bottom: 20px;
+  }
+  div {
+    padding-top: 9px;
+    padding-bottom: 9px;
   }
 }
