--- a/SAAS/style.scss
+++ b/SAAS/style.scss
@@ -12,17 +12,17 @@ html {
 }
 
 body {
-  background: linear-gradient(180deg, rgba(45, 51, 59, 0.5), #000000 95%),
-    url(../img/gora.jpg) no-repeat;
-  background-size: cover;
-  background-position: center;
   margin: 0;
   padding: 0;
   font-family: "Raleway", sans-serif;
 }
 
 .wrapper {
-  height: 100%;
+  background: linear-gradient(180deg, rgba(45, 51, 59, 0.5), #000000 95%),
+    url(../img/gora.jpg) no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -146,7 +146,6 @@ h1 {
   div {
     padding-top: 15px;
     padding-bottom: 15px;
-
     label {
       outline: none;
       cursor: pointer;
@@ -209,8 +208,17 @@ button[type="submit"] {
     font-size: 30px;
     top: -70px;
   }
+  input[type="text"],
+  [type="email"],
+  [type="password"] {
+    padding-top: 20px;
+  }
   .test {
     padding-top: 20px;
     padding-bottom: 20px;
+  }
+  div {
+    padding-top: 9px;
+    padding-bottom: 9px;
   }
 }
