--- a/SAAS/style.css
+++ b/SAAS/style.css
@@ -15,13 +15,14 @@
           box-sizing: border-box;
 }
 
-html {
+html,
+body {
   height: 100%;
+  padding: 0;
+  margin: 0;
 }
 
 body {
-  margin: 0;
-  padding: 0;
   font-family: "Raleway", sans-serif;
 }
 
@@ -30,10 +31,10 @@ body {
   background: linear-gradient(180deg, rgba(45, 51, 59, 0.5), #000000 95%), url(../img/gora.jpg) no-repeat;
   background-size: cover;
   background-position: center;
-  height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  min-height: 100vh;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -104,7 +105,6 @@ input[type="text"],
 [type="email"],
 [type="password"] {
   margin: 0 auto;
-  padding: 0;
   border: none;
   text-align: center;
   padding-top: 30px;
@@ -117,7 +117,7 @@ input[type="text"] ~ .focus-border,
 [type="email"] ~ .focus-border,
 [type="password"] ~ .focus-border {
   position: absolute;
-  bottom: 0;
+  bottom: 0px;
   left: 50%;
   width: 0;
   height: 2px;
@@ -322,6 +322,11 @@ button[type="submit"]:hover {
   [type="email"],
   [type="password"] {
     padding-top: 20px;
+  }
+  input[type="text"] ~ .focus-border,
+  [type="email"] ~ .focus-border,
+  [type="password"] ~ .focus-border {
+    bottom: 10px;
   }
   .test {
     padding-top: 20px;
