--- a/SAAS/style.scss
+++ b/SAAS/style.scss
@@ -7,13 +7,14 @@
   box-sizing: border-box;
 }
 
-html {
+html,
+body {
   height: 100%;
+  padding: 0;
+  margin: 0;
 }
 
 body {
-  margin: 0;
-  padding: 0;
   font-family: "Raleway", sans-serif;
 }
 
@@ -22,8 +23,8 @@ body {
     url(../img/gora.jpg) no-repeat;
   background-size: cover;
   background-position: center;
-  height: 100vh;
   display: flex;
+  min-height: 100vh;
   justify-content: center;
   align-items: center;
 }
@@ -71,7 +72,6 @@ input[type="text"],
 [type="email"],
 [type="password"] {
   margin: 0 auto;
-  padding: 0;
   border: none;
   text-align: center;
   padding-top: 30px;
@@ -81,7 +81,7 @@ input[type="text"],
 
   ~ .focus-border {
     position: absolute;
-    bottom: 0;
+    bottom: 0px;
     left: 50%;
     width: 0;
     height: 2px;
@@ -212,6 +212,10 @@ button[type="submit"] {
   [type="email"],
   [type="password"] {
     padding-top: 20px;
+
+    ~ .focus-border {
+      bottom: 10px;
+    }
   }
   .test {
     padding-top: 20px;
