--- a/SAAS/style.css
+++ b/SAAS/style.css
@@ -1,4 +1,21 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap");
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.centering {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 .visually-hidden, input[type="radio"] {
   position: absolute;
   width: 1px;
@@ -8,11 +25,6 @@
   padding: 0;
   clip: rect(0 0 0 0);
   overflow: hidden;
-}
-
-* {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
 }
 
 html,
@@ -30,6 +42,7 @@ body {
   background: linear-gradient(180deg, rgba(45, 51, 59, 0.5), #000000 95%), url(../img/gora.jpg) no-repeat;
   background-size: cover;
   background-position: center;
+  background-attachment: fixed;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -308,7 +321,8 @@ button[type="submit"]:hover {
 @media (max-width: 599px) {
   .form-wrapper {
     width: 300px;
-    margin-top: 80px;
+    position: absolute;
+    top: 20px;
   }
   fieldset {
     width: 200px;
@@ -324,5 +338,26 @@ button[type="submit"]:hover {
   .test div {
     padding-top: 10px;
     padding-bottom: 10px;
+  }
+}
+
+@media (min-width: 600px) {
+  .form-wrapper {
+    position: absolute;
+    top: 150px;
+  }
+}
+
+@media (min-width: 900px) {
+  .form-wrapper {
+    position: absolute;
+    top: 20px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .form-wrapper {
+    width: 400px;
+    margin-top: 120px;
   }
 }
